--- a/index.html
+++ b/index.html
@@ -763,11 +763,11 @@
                   About
                 </h4>
                 <div class="content" itemprop="description">
-                  Raised at Taiwan but flew to Canada after middle school.
+                  Eligible for working in Canada (Owns open work permit)
                   <br>
-                  Recently graduated from Queen&#x27;s University and have great desire to work for game companies.
-                  <br>A team player who’s excellent at juggling multiple tasks and working under pressure.
-                  <br>Designed multiple games by Unity and Python.
+                  Graduate with BA in General Computing
+                  <br>
+                  Proﬁcient with Java, JavaScript, C, C#, C++, Python, Unix, Linux and HTML/PHP/CSS
                 </div>
               </div>
             </div>
