--- a/index.html
+++ b/index.html
@@ -763,11 +763,11 @@
                   About
                 </h4>
                 <div class="content" itemprop="description">
-                  Eligible for working in Canada (Owns open work permit)
-                  <br>
-                  Graduate with BA in General Computing
-                  <br>
-                  Proﬁcient with Java, JavaScript, C, C#, C++, Python, Unix, Linux and HTML/PHP/CSS
+                  <ul style="list-style-type: square">
+                    <li>Eligible for working in Canada (Owns open work permit)
+                    <li>Graduate with BA in General Computing
+                    <li>Proﬁcient with Java, JavaScript, C, C#, C++, Python, Unix, Linux and HTML/PHP/CSS
+                  </ul>
                 </div>
               </div>
             </div>
@@ -784,24 +784,52 @@
                   <li class="card card-nested clearfix">
                     <div class="content">
                       <p class="clear-margin relative">
-                        <strong>Shipper/Receiver</strong>,&nbsp;
+                        <strong>Warehouse Staff</strong>,&nbsp;
                         <a href="https://www.boardgamebliss.com/" target="_blank">BoardGameBliss</a>
                       </p>
                       <p class="text-muted">
                         <small>
                           <span class="space-right">
                             Nov, 2018 -
-                            Invalid date
+                            Present
                           </span>
                           <span>
                             <i class="fa fa-clock-o icon-left"></i>
-                            NaN day
                           </span>
                         </small>
                       </p>
-                      <p>BoardGameBliss was founded in 2013. The store started with a dream to open a Board Game Cafe. We believe games brings happy and joy to people and can bond people together. This is one of the motivations for us to open the store, and to open a cafe in the future.</p>
+                      <ul style="list-style-type: square">
+                        <li>Building connections with customers and provide quality service
+                        <li>Processing in-store and online sales using point-of-sales system
+                        <li>Managing and confirm shipment transitions for deliveries
                     </div>
                   </li>
+
+                  <li class="card card-nested clearfix">
+                    <div class="content">
+                      <p class="clear-margin relative">
+                        <strong>Radio Operator</strong>,&nbsp;
+                        Army Communication, Electronics and Information School
+                      </p>
+                      <p class="text-muted">
+                        <small>
+                          <span class="space-right">
+                            March, 2018 -
+                            July, 2018
+                          </span>
+                          <span>
+                            <i class="fa fa-clock-o icon-left"></i>
+                          </span>
+                        </small>
+                      </p>
+                      <ul style="list-style-type: square">
+                        <li>Responding to emergency situations and transfer important messages
+                        <li>Set up communication system in collaboration with team members
+                        <li>Utilized reports and information to identify potential threats to the network
+                          <br>and implemented security measures to protect confidential data and information
+                    </div>
+                  </li>
+
                 </ul>
               </div>
             </div>
