--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 
             </div>
             <div class="name-and-profession">
-              <h3 class="text-center text-bolder name" itemprop="name"> Simon Pan</h3>
+              <h3 class="text-center text-bolder name" itemprop="name" font-size="300%"> Simon Pan</h3>
               <h5 class="text-muted text-center" itemprop="jobTitle">Programmer</h5>
             </div>
           </span>
@@ -715,15 +715,15 @@
                 <i class="fa fa-lg fa-location-arrow"></i>
               </span>
               <span class="info">
-                Toronto, Ontario, CA
+                #1803 28 Wellesley St E, Toronto, M4Y 0C4, Canada
               </span>
             </div>
             <div class="detail">
               <span class="icon">
                 <i class="fa fa-lg fa-phone"></i>
               </span>
-              <span class="info" itemprop="telephone">
-                (416)526-9485
+              <span class="info" itemprop="phone">
+                Cell: (416)526-9485
               </span>
             </div>
             <div class="detail">
@@ -863,9 +863,21 @@
                           <span class="label label-keyword">C#</span>
                           <span class="label label-keyword">C++</span>
                           <span class="label label-keyword">Python</span>
-                          <span class="label label-keyword">Java</span>
+                          <span class="
+                          ">Java</span>
+                          <span class="label label-keyword">JavaScript</span>
+                          <span class="label label-keyword">Unix</span>
+                          <span class="label label-keyword">Linux</span>
+                          <span class="label label-keyword">bash</span>
                         </div>
                       </div>
+                      <li class="card card-nested card-skills">
+                        <div class="skill-info">
+                          <strong>Game Design</strong>
+                          <div class="space-top labels">
+                            <span class="label label-keyword">Unity</span>
+                          </div>
+                        </div>
                     </li>
                   </ul>
                 </div>
@@ -896,15 +908,18 @@
                         </p>
                         <i></i>
                         <div class="space-top labels">
-                          <span class="label label-keyword">CISC204 Logic for Computing Science</span>
+                          <span class="label label-keyword">CISC 204 Logic for Computing Science</span>
                           <span class="label label-keyword">CISC 220 System Level Programming</span>
                           <span class="label label-keyword">CISC 221 Computer Architecture</span>
+                          <br>
                           <span class="label label-keyword">CISC 223 Software Specifications</span>
                           <span class="label label-keyword">CISC 226 Game Design</span>
                           <span class="label label-keyword">CISC 235 Data Structures</span>
+                          <br>
                           <span class="label label-keyword">CISC 282 Fund. Web Development</span>
                           <span class="label label-keyword">CISC 326 Game Architecture</span>
                           <span class="label label-keyword">CISC 422 Formal Methods in Software Eng</span>
+                          <br>
                           <span class="label label-keyword">COCA 201 Intro Comp &amp; Creative Arts</span>
                         </div>
                       </div>
@@ -931,6 +946,7 @@
                       <div class="space-top labels">
                         <span class="label label-keyword">Rainbow Six:Siege</span>
                         <span class="label label-keyword">League of Legends</span>
+                        <span class="label label-keyword">Apex Legends</span>
                       </div>
                     </li>
                     <li class="card card-nested">
