--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                 <i class="fa fa-lg fa-phone"></i>
               </span>
               <span class="info" itemprop="phone">
-                Cell: (416)526-9485
+                (416)526-9485
               </span>
             </div>
             <div class="detail">
@@ -731,7 +731,7 @@
                 <i class="fa fa-lg fa-envelope"></i>
               </span>
               <span class="info">
-                <a href="/cdn-cgi/l/email-protection#083939716b783948797d6d6d667b7d266b69" class="link-disguise" itemprop="email"><span class="__cf_email__" data-cfemail="5160602832216011202434343f22247f3230">[email&#160;protected]</span></a>
+                simonpan0318@gmail.com
               </span>
             </div>
             <div class="detail">
