--- a/index.html
+++ b/index.html
@@ -863,8 +863,7 @@
                           <span class="label label-keyword">C#</span>
                           <span class="label label-keyword">C++</span>
                           <span class="label label-keyword">Python</span>
-                          <span class="
-                          ">Java</span>
+                          <span class="label label-keyword">Java</span>
                           <span class="label label-keyword">JavaScript</span>
                           <span class="label label-keyword">Unix</span>
                           <span class="label label-keyword">Linux</span>
