--- a/index.html
+++ b/index.html
@@ -944,8 +944,23 @@
                       </p>
                       <div class="space-top labels">
                         <span class="label label-keyword">Rainbow Six:Siege</span>
-                        <span class="label label-keyword">League of Legends</span>
                         <span class="label label-keyword">Apex Legends</span>
+                        <span class="label label-keyword">Risk of Rain 2</span>
+                        <span class="label label-keyword">Slay the Spire</span>
+                        <span class="label label-keyword">Hearthstone</span>
+                        <span class="label label-keyword">World of Warcraft</span>
+                      </div>
+                    </li>
+                    <li class="card card-nested">
+                      <p>
+                        <strong>Mobile Games</strong>
+                      </p>
+                      <div class="space-top labels">
+                        <span class="label label-keyword">Fate/Grand Order</span>
+                        <span class="label label-keyword">Idol M@ster: Cinderella Girls</span>
+                        <span class="label label-keyword">Puzzle&Dragons</span>
+                        <span class="label label-keyword">Clash Royale</span>
+                        <span class="label label-keyword">Pokemon Go</span>
                       </div>
                     </li>
                     <li class="card card-nested">
@@ -966,6 +981,7 @@
                         <span class="label label-keyword">Magic: the gathering</span>
                         <span class="label label-keyword">Pokemon TCG</span>
                         <span class="label label-keyword">Weiss Schwarz</span>
+                        <span class="label label-keyword">Card fight! Vanguard</span>
                       </div>
                     </li>
                   </ul>
