--- a/index.html
+++ b/index.html
@@ -690,6 +690,12 @@
             </a>
           </li>
           <li>
+            <a href="#projects">
+              <i class="fa fa-mortar-board"></i>
+              Projects
+            </a>
+          </li>
+          <li>
             <a href="#interests">
               <i class="fa fa-heart"></i>
               Interests
@@ -791,7 +797,7 @@
                         <small>
                           <span class="space-right">
                             Nov, 2018 -
-                            Present
+                            May, 2019
                           </span>
                           <span>
                             <i class="fa fa-clock-o icon-left"></i>
@@ -910,17 +916,80 @@
                           <span class="label label-keyword">CISC 204 Logic for Computing Science</span>
                           <span class="label label-keyword">CISC 220 System Level Programming</span>
                           <span class="label label-keyword">CISC 221 Computer Architecture</span>
-                          <br>
                           <span class="label label-keyword">CISC 223 Software Specifications</span>
                           <span class="label label-keyword">CISC 226 Game Design</span>
                           <span class="label label-keyword">CISC 235 Data Structures</span>
-                          <br>
                           <span class="label label-keyword">CISC 282 Fund. Web Development</span>
+                          <br>
                           <span class="label label-keyword">CISC 326 Game Architecture</span>
+                          <br>
                           <span class="label label-keyword">CISC 422 Formal Methods in Software Eng</span>
                           <br>
                           <span class="label label-keyword">COCA 201 Intro Comp &amp; Creative Arts</span>
                         </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="detail" id="projects">
+              <div class="icon">
+                <i class="fa fa-lg fa-mortar-board"></i>
+                <span class="mobile-title">Projects</span>
+              </div>
+              <div class="info">
+                <h4 class="title text-uppercase">
+                  Projects
+                </h4>
+                <div class="content">
+                  <ul class="list-unstyled">
+                    <li class="card card-nested">
+                      <div class="content">
+                        <p class="clear-margin relative">
+                          <strong>“Supertux” architecture analyzation</strong>,&nbsp;
+                        </p>
+                        <p>
+                          Using application "Understand" to analyze the game “Supertux”.<br>
+                          Understand is a tool that visualize codes which also shows connections between each file.<br>
+                          In Game Architecture course, each teams needs to come up with ideas for finalizing concrete architecture from conceptual architecture.<br>
+                          Following links contain documentations of teamwork:<br>
+                          <a href="https://github.com/ujou0318/Projects/tree/master/%E2%80%9CSupertux%E2%80%9D%20architecture%20analyzation" target="_blank">
+                            https://github.com/ujou0318/Projects/tree/master/%E2%80%9CSupertux%E2%80%9D%20architecture%20analyzation</a>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="card card-nested">
+                      <div class="content">
+                        <p class="clear-margin relative">
+                          <strong>Game Design:</strong>,&nbsp;(Fly Free, City Jump, Alien Invasion)
+                        </p>
+                        <p>
+                          Have experience of using Unity to create games either in team or individual.<br>
+                          Fly-Free was made during Game Design course with 2 other team members, One City-Jump and Alien Invasion are made by my own.<br>
+                          During progress of Fly-Free, since assest and coding cannot be separated, I was assigned for both coding and graphics.<br>
+                          Both games were assigned for documentations and ideas. Both games created were 2D platformer games.<br>
+                          Alien Invasion is coded by Python with Pygames, similar developing process as City Jump but different programming languages.<br>
+                          Links below:<br>
+                          <a href="https://github.com/ujou0318/Projects/tree/master/Game%20Projects" target="_blank">
+                            https://github.com/ujou0318/Projects/tree/master/Game%20Projects</a>
+                        </p>
+                      </div>
+                    </li>
+                    <li class="card card-nested">
+                      <div class="content">
+                        <p class="clear-margin relative">
+                          <strong>Predicate Logic</strong>,&nbsp;
+                        </p>
+                        <p>
+                          Object-oriented code writing in Java.<br>
+                          A school project of Formal Methods in Software Engineering.<br>
+                          The assignment is about the implementation of an evaluation routine of predicate logic formulas in Java.<br>
+                          Course Page: <a href="http://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html" target="_blank">
+                            http://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html</a><br>
+                          Codes below: <a href="https://github.com/ujou0318/Projects/tree/master/lego" target="_blank">
+                          https://github.com/ujou0318/Projects/tree/master/lego</a>
+                        </p>
                       </div>
                     </li>
                   </ul>
@@ -943,12 +1012,17 @@
                         <strong>Video Games</strong>
                       </p>
                       <div class="space-top labels">
+                        <span class="label label-keyword">Minecraft</span>
                         <span class="label label-keyword">Rainbow Six:Siege</span>
                         <span class="label label-keyword">Apex Legends</span>
                         <span class="label label-keyword">Risk of Rain 2</span>
                         <span class="label label-keyword">Slay the Spire</span>
                         <span class="label label-keyword">Hearthstone</span>
                         <span class="label label-keyword">World of Warcraft</span>
+                        <span class="label label-keyword">Kantai Collection</span>
+                        <br>
+                        <span class="label label-keyword">Super Smash Bros: Ultimate</span>
+                        <span class="label label-keyword">Splatoon 2</span>
                       </div>
                     </li>
                     <li class="card card-nested">
@@ -958,9 +1032,23 @@
                       <div class="space-top labels">
                         <span class="label label-keyword">Fate/Grand Order</span>
                         <span class="label label-keyword">Idol M@ster: Cinderella Girls</span>
+                        <span class="label label-keyword">BanG Dream! Girls Band Party!</span>
                         <span class="label label-keyword">Puzzle&Dragons</span>
                         <span class="label label-keyword">Clash Royale</span>
                         <span class="label label-keyword">Pokemon Go</span>
+                        <span class="label label-keyword">Girl's Frontline</span>
+                        <span class="label label-keyword">Granblue Fantasy</span>
+                      </div>
+                    </li>
+                    <li class="card card-nested">
+                      <p>
+                        <strong>Arcade Games</strong>
+                      </p>
+                      <div class="space-top labels">
+                        <span class="label label-keyword">Mobile Suit Gundam Extreme Vs. Maxi Boost ON</span>
+                        <span class="label label-keyword">King of Fighters XIII</span>
+                        <span class="label label-keyword">Wangan Midnight Maximum Tune 5</span>
+                        <span class="label label-keyword">BlazBlue</span>
                       </div>
                     </li>
                     <li class="card card-nested">
