--- a/resume.html
+++ b/resume.html
@@ -714,7 +714,6 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
           </span>
           <hr>
           <div class="contact-details clearfix">
-        <!-- Cover Personal Information.
             <div class="detail">
               <span class="icon">
                 <i class="fa fa-lg fa-location-arrow"></i>
@@ -731,7 +730,6 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
                 (416)526-9485
               </span>
             </div>
-        -->
             <div class="detail">
               <span class="icon">
                 <i class="fa fa-lg fa-envelope"></i>
@@ -1087,7 +1085,7 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
     </div>
   </div>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  <script data-cfasync="true" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.js"></script>
+  <script data-cfasync="true" src="./js/email-decode.min.js"></script><script src="./js/jquery.min.js"></script>
+  <script src="./js/resume.js"></script>
 </body>
 </html>
