update resume, index, css name change

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-
+<!--
+  Background color : #121212
+  Color: color: #c6c6c6
+  Box color: #262626
+  Box border color: #7a7a7a
+  label color: #2a965c
+-->
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
