--- a/resume.html
+++ b/resume.html
@@ -979,8 +979,8 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
                           Understand is a tool that visualize codes which also shows connections between each file.<br>
                           In Game Architecture course, each teams needs to come up with ideas for finalizing concrete architecture from conceptual architecture.<br>
                           Following links contain documentations of teamwork:<br>
-                          <a href="https://github.com/ujou0318/Projects/tree/master/%E2%80%9CSupertux%E2%80%9D%20architecture%20analyzation" target="_blank">
-                            https://github.com/ujou0318/Projects/tree/master/%E2%80%9CSupertux%E2%80%9D%20architecture%20analyzation</a>
+                          <a href="https://git.io/fj6VO" target="_blank">
+                            https://git.io/fj6VO</a>
                         </p>
                       </div>
                     </li>
@@ -997,8 +997,8 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
                           Both games were assigned for documentations and ideas. Both games created were 2D platformer games.<br>
                           Alien Invasion is coded by Python with Pygames, similar developing process as City Jump but different programming languages.<br>
                           Links below:<br>
-                          <a href="https://github.com/ujou0318/Projects/tree/master/Game%20Projects" target="_blank">
-                            https://github.com/ujou0318/Projects/tree/master/Game%20Projects</a>
+                          <a href="https://git.io/fj6Vs" target="_blank">
+                            https://git.io/fj6Vs</a>
                         </p>
                       </div>
                     </li>
@@ -1014,8 +1014,8 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
                           The assignment is about the implementation of an evaluation routine of predicate logic formulas in Java.<br>
                           Course Page: <a href="http://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html" target="_blank">
                             http://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html</a><br>
-                          Codes below: <a href="https://github.com/ujou0318/Projects/tree/master/lego" target="_blank">
-                          https://github.com/ujou0318/Projects/tree/master/lego</a>
+                          Codes below: <a href="https://git.io/fj6VG" target="_blank">
+                          https://git.io/fj6VG</a>
                         </p>
                       </div>
                     </li>
