--- a/resume.html
+++ b/resume.html
@@ -189,7 +189,7 @@ body {
   left: -10px;
 }
 /*
-Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
+Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
 */
 .floating-nav-trigger {
   width: 50px;
@@ -640,7 +640,7 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
   }
 }
 </style>
-<body itemscope itemtype="http://schema.org/Person">
+<body itemscope itemtype="https://schema.org/Person">
   <script>
   window.onload = function () {
     var toggleFloatingMenu = function() {
@@ -988,8 +988,8 @@ Credits: http://codyhouse.co/demo/smart-fixed-navigation/index.html
                           Object-oriented code writing in Java.<br>
                           A school project of Formal Methods in Software Engineering.<br>
                           The assignment is about the implementation of an evaluation routine of predicate logic formulas in Java.<br>
-                          Course Page: <a href="http://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html" target="_blank">
-                            http://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html</a><br>
+                          Course Page: <a href="https://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html" target="_blank">
+                            https://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html</a><br>
                           Codes below: <a href="https://git.io/fj6VG" target="_blank">
                           https://git.io/fj6VG</a>
                         </p>
