--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+  Background color : #121212
+  Color: color: #c6c6c6
+  Title Color: #8a8a8a
+  Box color: #262626
+  Box border color: #7a7a7a
+  label color: #326496
+-->
 <html lang="en", class="resume">
 <head>
   <title>Simon's Resume</title>
@@ -34,11 +42,11 @@
 }
 .label-keyword {
   display: inline-block;
-  background: #2a965c;
+  background: #326496;
   color: #e0e0e0;
   font-size: 0.9em;
   padding: 3px;
-  border: 1px solid #15482e;
+  border: 1px solid #262626;
 }
 .link-disguise {
   color: inherit;
@@ -205,7 +213,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   padding-top: 10px;
   background-color: #262626;
   font-size: 1.5em;
-  color: #357ebd;
+  color: #c6c6c6;
   z-index: 100;
   position: fixed;
   bottom: 10px;
@@ -215,7 +223,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   display: none;
 }
 .floating-nav-trigger:hover {
-  color: #357ebd;
+  color: #8a8a8a;
   background-color: #121212;
   text-decoration: none;
 }
@@ -261,16 +269,16 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   margin: 0;
 }
 .floating-nav ul li {
-  border-bottom: 1px solid #283648;
+  border-bottom: 1px solid #c6c6c6;
 }
 .floating-nav ul li a {
   padding: 20px;
   text-decoration: none;
-  color: #357ebd;
+  color: #c6c6c6;
   display: block;
 }
 .floating-nav ul li a:hover {
-  color: #1f496e;
+  color: #8a8a8a;
 }
 .floating-nav ul li i.fa {
   margin-right: 10px;
@@ -691,7 +699,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
           </li>
           <li>
             <a href="#projects">
-              <i class="fa fa-mortar-board"></i>
+              <i class="fa fa-file-code-o"></i>
               Projects
             </a>
           </li>
@@ -772,7 +780,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
                   <ul style="list-style-type: square">
                     <li>Eligible for working in Canada (Owns open work permit)
                     <li>Graduate with BA in General Computing
-                    <li>Proﬁcient with Java, JavaScript, C, C#, C++, Python, Unix, Linux and HTML/PHP/CSS
+                    <li>Proﬁcient with Java, JavaScript, C, C#, C++, Python, .NET, PowerShell, IIS, Unix, Linux and HTML/PHP/CSS
                   </ul>
                 </div>
               </div>
@@ -871,6 +879,9 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
                           <span class="label label-keyword">Python</span>
                           <span class="label label-keyword">Java</span>
                           <span class="label label-keyword">JavaScript</span>
+                          <span class="label label-keyword">.NET</span>
+                          <span class="label label-keyword">PowerShell</span>
+                          <span class="label label-keyword">IIS</span>
                           <span class="label label-keyword">Unix</span>
                           <span class="label label-keyword">Linux</span>
                           <span class="label label-keyword">bash</span>
@@ -935,7 +946,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
             </div>
             <div class="detail" id="projects">
               <div class="icon">
-                <i class="fa fa-lg fa-mortar-board"></i>
+                <i class="fa fa-lg fa-file-code-o"></i>
                 <span class="mobile-title">Projects</span>
               </div>
               <div class="info">
