--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <!--
   Background color : #121212
   Color: color: #c6c6c6
+  Title Color: #8a8a8a
   Box color: #262626
   Box border color: #7a7a7a
-  label color: #2a965c
+  label color: #326496
 -->
 <body>
   <h1>Hello World</h1>
