--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <!--
   Background color : #121212
   Color: color: #c6c6c6
@@ -8,9 +7,40 @@
   Box border color: #7a7a7a
   label color: #326496
 -->
+
+<html lang="en", class="home">
+<head>
+  <title>Simon's</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<style>
+body {
+  font-family: 'Lato';
+  background: #121212;
+  color: #c6c6c6;
+  margin:0;
+}
+.main {
+  padding: 5px;
+}
+.jumbotron {
+  background-color: #262626;
+  border: 1px solid #7a7a7a;
+  border-radius: 3px;
+  margin:5px;
+}
+</style>
 <body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
+  <div class="jumbotron text-center">
+    <h1>Simon's</h1>
+    <p>Home Page</p>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </body>
 
 </html>
