--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href ="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href ="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
   <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--I had downloaded css file for font-awesome, but you need to download icon package and linked them or icons will not be displayed.-->
 </head>
@@ -38,15 +38,18 @@
 }
 .labels {
   word-spacing: 3px;
-  line-height: 2;
 }
 .label-keyword {
   display: inline-block;
   background: #326496;
   color: #e0e0e0;
   font-size: 0.9em;
-  padding: 3px;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
   border: 1px solid #262626;
+  border-radius: 4px;
 }
 .link-disguise {
   color: inherit;
@@ -210,7 +213,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   display: block;
   border-radius: 50%;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 8px;
   background-color: #262626;
   font-size: 1.5em;
   color: #c6c6c6;
@@ -232,13 +235,15 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   box-shadow: none;
 }
 .floating-nav-trigger.is-open .close-icon {
+  color: #8a8a8a;
   display: inherit;
 }
 .floating-nav-trigger.is-open .fa-bars {
+  color: #8a8a8a;
   display: none;
 }
 .floating-nav-trigger.is-open:hover {
-  background-color: #262626;
+  background-color: #121212;
 }
 .floating-nav {
   -webkit-transform: scale(0);
@@ -259,6 +264,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   right: 10px;
   bottom: 10px;
   background-color: #262626;
+  color: #8a8a8a;
   width: 90%;
   max-width: 400px;
   visibility: hidden;
@@ -999,8 +1005,6 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
                           Object-oriented code writing in Java.<br>
                           A school project of Formal Methods in Software Engineering.<br>
                           The assignment is about the implementation of an evaluation routine of predicate logic formulas in Java.<br>
-                          Course Page: <a href="https://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html" target="_blank">
-                            https://research.cs.queensu.ca/~cisc422/2017f/assignments/A1/a1.html</a><br>
                           Codes below: <a href="https://git.io/fj6VG" target="_blank">
                           https://git.io/fj6VG</a>
                         </p>
@@ -1098,7 +1102,8 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
     </div>
   </div>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  <script data-cfasync="true" src="./js/email-decode.min.js"></script><script src="./js/jquery.min.js"></script>
-  <script src="./js/resume.js"></script>
+  <script data-cfasync="true" src="https://firepitsly.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </body>
 </html>
