--- a/resume.html
+++ b/resume.html
@@ -231,6 +231,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   text-decoration: none;
 }
 .floating-nav-trigger.is-open {
+  background-color: #262626;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
