update tooltip and other functions
adding template-elegant for mirror fixing

--- a/index.html
+++ b/index.html
@@ -7,19 +7,36 @@
   Box border color: #7a7a7a
   label color: #326496
 -->
-
 <html lang="en", class="home">
 <head>
   <title>Simon's</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <style>
+.relative {
+  position: relative;
+}
+.clear-margin {
+  margin: 0;
+}
+.space-top {
+  margin-top: 10px;
+}
+.space-right {
+  margin-right: 10px;
+}
+.icon-left {
+  margin-right: 5px;
+}
+.icon-right {
+  margin-left: 5px;
+}
 body {
   font-family: 'Lato';
   background: #121212;
@@ -36,7 +53,7 @@ body {
   margin:5px;
 }
 </style>
-<body>
+<body itemscope itemtype="https://schema.org/">
   <div class="jumbotron text-center">
     <h1>Simon's</h1>
     <p>Home Page</p>
