--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
@@ -60,10 +60,7 @@
     background: #326496;
     color: #e0e0e0;
     font-size: 0.9em;
-    padding-left: 3px;
-    padding-right: 3px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding: 4px;
     border: 1px solid #262626;
     border-radius: 4px;
   }
@@ -817,7 +814,6 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
         $('.js-floating-nav').toggleClass('is-visible');
         $('.js-floating-nav-trigger').toggleClass('is-open');
       };
-
       $(".background-card").css("min-height", window.screen.availHeight + "px");
       $("[data-toggle=tooltip]").tooltip();
       $('.js-floating-nav-trigger').on('click', function(e) {
@@ -1280,8 +1276,7 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <script data-cfasync="true" src="https://firepitsly.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
