--- a/resume.html
+++ b/resume.html
@@ -805,6 +805,9 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
       page-break-before: always;
     }
   }
+  @font-face {
+    text-rendering: optimizeLegibility;
+  }
 </style>
 
 <body itemscope itemtype="https://schema.org/Person">
@@ -917,11 +920,11 @@ Credits: https://codyhouse.co/demo/smart-fixed-navigation/index.html
           </div>
           <hr>
           <div class="social-links text-center">
-            <a class="fa fa-lg link-twitter fa-twitter" target="_blank" data-toggle="tooltip" title="Twitter" href="https://twitter.com/mar41710"></a>
-            <a class="fa fa-lg link-facebook fa-facebook " target="_blank" data-toggle="tooltip" title="Facebook" href="https://www.facebook.com/yu.c.pan"></a>
-            <a class="fa fa-lg link-twitch fa-twitch" target="_blank" data-toggle="tooltip" title="Twtich" href="https://www.twitch.tv/ujou0318"></a>
-            <a class="fa fa-lg link-twitch fa-github" target="_blank" data-toggle="tooltip" title="GitHub" href="https://github.com/ujou0318"></a>
             <a class="fa fa-lg link-linkedin fa-linkedin" target="_blank" data-toggle="tooltip" title="LinkedIn" href="https://www.linkedin.com/in/yu-cheng-pan-685268139/"></a>
+            <a class="fa fa-lg link-twitter fa-twitter-square" target="_blank" data-toggle="tooltip" title="Twitter" href="https://twitter.com/mar41710"></a>
+            <a class="fa fa-lg link-facebook fa-facebook-square" target="_blank" data-toggle="tooltip" title="Facebook" href="https://www.facebook.com/yu.c.pan"></a>
+            <a class="fa fa-lg link-twitch fa-twitch" target="_blank" data-toggle="tooltip" title="Twtich" href="https://www.twitch.tv/ujou0318"></a>
+            <a class="fa fa-lg link-twitch fa-github-square" target="_blank" data-toggle="tooltip" title="GitHub" href="https://github.com/ujou0318"></a>
             <a class="fa fa-lg link-youtube fa-youtube" target="_blank" data-toggle="tooltip" title="YouTube" href="https://www.youtube.com/channel/UCrWWXHrwTHe77l3fwnwv_sQ"></a>
             <div>
             </div>
